[BUGFIX] EXT:recycler Collapsed record occupies no space
Without this patch the collapsed record occupied the same size as
the expanded record.

Resolves: #69987
Releases: master
Reviewed-on: http://review.typo3.org/43450
Tested-by: Frank Nägler <frank.naegler@typo3.org>
Tested-by: Loek Hilgersom <loek@netcoop.nl>
Tested-by: Anja Leichsenring <aleichsenring@ab-softlab.de>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -12767,6 +12767,9 @@ iframe {
 .query-builder .indent {
   padding-left: 20px;
 }
+tr.collapse {
+  display: none;
+}
 .tx_scheduler_mod1 .table td {
   vertical-align: top;
 }
